--- a/nginx.conf
+++ b/nginx.conf
@@ -1,21 +1,32 @@
 server {
     listen 80;
-    server_name robrobot-loadbalancer-980562543.eu-west-2.elb.amazonaws.com;
+    server_name localhost;
 
-    location / {
-        root /usr/share/nginx/html;
-        index index.html index.htm;
-        try_files $uri $uri/ /index.html;
+    root /usr/share/nginx/html;
+    index index.html index.htm;
+
+    # Serve static files directly
+    location /static/ {
+        alias /usr/share/nginx/html/static/;
+        expires max;
+        access_log off;
     }
 
+    # Handle API requests
     location /api/ {
-        proxy_pass http://robrobot-backend:8000;
+        proxy_pass http://backend:8000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
+    # Catch-all fallback to index.html for React Router
+    location / {
+        try_files $uri $uri/ /index.html;
+    }
+
+    # Error pages
     error_page 404 /404.html;
     location = /404.html {
         internal;
