--- a/nginx.conf
+++ b/nginx.conf
@@ -1,18 +1,15 @@
 server {
     listen 80;
+    listen [::]:80;
     server_name localhost;
 
     root /usr/share/nginx/html;
-    index index.html index.htm;
+    index index.html;
 
-    # Serve static files directly
-    location /static/ {
-        alias /usr/share/nginx/html/static/;
-        expires max;
-        access_log off;
+    location / {
+        try_files $uri $uri/ /index.html;
     }
 
-    # Handle API requests
     location /api/ {
         proxy_pass http://backend:8000;
         proxy_set_header Host $host;
@@ -21,14 +18,13 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # Catch-all fallback to index.html for React Router
-    location / {
-        try_files $uri $uri/ /index.html;
-    }
-
-    # Error pages
     error_page 404 /404.html;
     location = /404.html {
         internal;
+    }
+
+    error_page 500 502 503 504 /50x.html;
+    location = /50x.html {
+        root /usr/share/nginx/html;
     }
 }
