Updated CV page

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # Local development
 REACT_APP_API_BASE_URL_DEV=http://127.0.0.1:8000/api
-REACT_APP_API_BASE_URL_PROD=http://robrobot-loadbalancer-980562543.eu-west-2.elb.amazonaws.com:8000/api
-REACT_APP_NODE_ENV=development
+REACT_APP_API_BASE_URL_PROD=https://robhayward.io/api
+REACT_APP_NODE_ENV=production
 
 # Docker environment
 REACT_APP_API_BASE_URL_DOCKER=http://backend:8000/api
