--- a/nginx.conf
+++ b/nginx.conf
@@ -1,8 +1,7 @@
 server {
     listen 80;
     listen [::]:80;
-#     server_name robrobot-loadbalancer-980562543.eu-west-2.elb.amazonaws.com; # for production
-    server_name localhost; # for development
+    server_name robhayward.io www.robhayward.io;
     root /usr/share/nginx/html;
     index index.html;
 
@@ -11,8 +10,7 @@ server {
     }
 
     location /api/ {
-#         proxy_pass http://robrobot-loadbalancer-980562543.eu-west-2.elb.amazonaws.com; # for production
-        proxy_pass http://localhost:8080; # for development
+        proxy_pass http://robrobot-loadbalancer-980562543.eu-west-2.elb.amazonaws.com:8000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
