--- a/nginx.conf
+++ b/nginx.conf
@@ -2,6 +2,7 @@ server {
     listen 80;
     listen [::]:80;
     server_name robhayward.io www.robhayward.io;
+#     server_name localhost;
     root /usr/share/nginx/html;
     index index.html;
 
@@ -11,6 +12,7 @@ server {
 
     location /api/ {
         proxy_pass http://robrobot-loadbalancer-980562543.eu-west-2.elb.amazonaws.com:8000;
+#         proxy_pass http://localhost:8080;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
