--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # Local development
 REACT_APP_API_BASE_URL_DEV=http://127.0.0.1:8000/api
-REACT_APP_API_BASE_URL_PROD=https://robhayward.io/api
+REACT_APP_API_BASE_URL_PROD=https://robrobot-backend.onrender.com/api
 REACT_APP_NODE_ENV=production
 
 # Docker environment
